# kata-fast-api-with-domain-events

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Makefile  README.md  TESTING.md  coverage.xml  debug.sh  docker-compose.test.yml  docker-compose.yml  dockerfile  pyproject.toml  ruff.toml  run_tests.py  test_config.py
alembic/: env.py
alembic/versions/: 19b0befbcb8c_auto.py  5cddba0045cb_auto.py  83535b4e5531_auto.py
app/: broker.py  dependencies.py  main.py
app/config/: default.yml  settings.py
app/contexts/customers/application/: customer_creator.py  customer_searcher.py
app/contexts/customers/container/: customer_services.py
app/contexts/customers/domain/entities/: customer.py
app/contexts/customers/domain/repositories/: customer_repository.py
app/contexts/customers/infrastructure/api/: routes.py
app/contexts/customers/infrastructure/persistence/: sqlite_customer_repository.py
app/contexts/customers/infrastructure/persistence/models/: customer.py
app/contexts/policy_procurement/application/: create_proposal.py
app/contexts/policy_procurement/domain/entities/: proposal.py
app/contexts/policy_procurement/infrastructure/api/: routes.py
app/routers/: items.py
app/shared/containers/: core.py  database.py  main.py  persistence.py
app/shared/domain/: aggregate_root.py
app/shared/domain/event/: domain_event.py  domain_event_subscriber.py  event_bus.py
app/shared/infrastructure/api/health/: routes.py
app/shared/infrastructure/api/tasks/: __init__.py  routes.py
app/shared/infrastructure/celery/: app.py
app/shared/infrastructure/db/: interface.py  postgresql_async.py  sqlite_async.py
app/shared/infrastructure/event/: in_memory_event_bus.py
app/shared/infrastructure/orm/: sqlmodel.py
app/shared/infrastructure/sqs/: client.py  dispatcher.py  interface.py  models.py  tasks.py  worker.py
docs/: LAMBDA.md  LOCALSTACK.md  MULTI_QUEUE_SETUP.md  QUEUE_QUICK_REFERENCE.md  SQS_WORKER.md  TESTING.md
lambda/: Dockerfile  lambda_handler.py
localstack/: sqs.sh
scripts/: deploy-lambda-ecr.sh  deploy-lambda-localstack.sh  dispatch_tasks.py  localstack-init.sh  package-lambda-zip.sh  precommit-utils.sh  setup-precommit.sh  test-lambda-localstack.sh  test_sqs_localstack.py  worker.py  worker_example.py
tests/: .coverage  conftest.py  coverage.xml  docker-compose.test.yml  run_tests.py  test_config.py  test_customers_integration.py  test_main.py
tests/unit/shared/infrastructure/: test_in_memory_event_bus.py
worker/: celery.py  worker.py  worker_multi_queue_example.py
worker/tasks/: generate_report.py  send_email.py  send_sms.py  unstable_task.py
