[project]
name = "events-with-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.118.0",
    "greenlet>=3.2.4",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.16",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "ruff>=0.13.3",
]
