[project]
name = "events-with-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "celery[sqs]==5.2.6",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.118.0",
    "greenlet>=3.2.4",
    "httptools>=0.6.4",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.16",
    "uvicorn>=0.37.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
